gitops/apps/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
