gitops/apps/actual-budget/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
      sectionName: https-internal
  hostnames:
    - budget.internal.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - group: ""
          kind: Service
          name: actualbudget
          port: 5006
          weight: 1
